fix schema
